fix for service provider api
