# lib/models/account.js
@@ -10,6 +10,7 @@ function transmogrifyResults(results) {
     const obj = row.acc;
     if (row.rh && Object.keys(row.rh).length && row.rh.url !== null) {
       Object.assign(obj, {registration_hook: row.rh});
+      delete obj.registration_hook.webhook_sid;
     }
     else obj.registration_hook = null;
     delete obj.registration_hook_sid;
